--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         "php": ">= 7.1",
         "phpunit/phpunit": "7.* | 8.*"
     },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
+    },
     "autoload": {
         "psr-4": {
             "ArtARTs36\\WeatherArchive\\": "src"
@@ -22,5 +25,13 @@
         "psr-4": {
             "ArtARTs36\\WeatherArchive\\Tests\\": "tests"
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit -v --coverage-text --colors=never --configuration phpunit.xml --stop-on-failure --stop-on-risky",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "lint": [
+            "./vendor/bin/phpcs --standard=PSR2 src/",
+            "./vendor/bin/phpcs --standard=PSR2 tests/"
+        ]
     }
 }
