add description into composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "artarts36/weather-archive",
     "type": "library",
     "license": "MIT",
+    "description": "Weather Archive",
     "authors": [
         {
             "name": "ArtARTs36",
