--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,6 @@
 # Ignore all test and documentation with "export-ignore".
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/phpunit.xml   export-ignore
+/phpunit.xml        export-ignore
 /tests              export-ignore
+/.github            export-ignore
